logs/wsgid.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/wsgid'...
Compiling './lib/python3.5/site-packages/wsgid/benchmark.py'...
***   File "./lib/python3.5/site-packages/wsgid/benchmark.py", line 94
    print '%8s\t%18s\t%8s' % ('--------', '------------------', '--------')
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgid/daemon.py'...
***   File "./lib/python3.5/site-packages/wsgid/daemon.py", line 66
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgid/main.py'...
***   File "./lib/python3.5/site-packages/wsgid/main.py", line 23
    except DaemonNotRunningError, e:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgid/server.py'...
***   File "./lib/python3.5/site-packages/wsgid/server.py", line 164
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wsgid/servers'...
Listing './lib/python3.5/site-packages/wsgid/servers/cherrypy'...
Compiling './lib/python3.5/site-packages/wsgid/servers/cherrypy/cherryserver.py'...
***   File "./lib/python3.5/site-packages/wsgid/servers/cherrypy/cherryserver.py", line 430
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/wsgid/test_app.py'...
***   File "./lib/python3.5/site-packages/wsgid/test_app.py", line 17
    print req.path
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/wsgid-0.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
